--- a/style.css
+++ b/style.css
@@ -598,11 +598,11 @@ a.orangeLink:hover,#topBar a.orangeLink:hover
 	font-size:14px;
 	text-decoration:underline;
 	color:rgba(255,255,255,0.8);
-	transition:color 0.2s,box-shadow 0.2s,transform 0.2s;
+	transition:color 0.2s,box-shadow 0.2s;
 	cursor:pointer;
-	transform:scale(1);
 	z-index:1;
 	position:relative;
+	border-radius:3px;
 }
 .langSelectButton:hover,.langSelectButton.selected
 {
@@ -610,7 +610,19 @@ a.orangeLink:hover,#topBar a.orangeLink:hover
 	box-shadow:0px 0px 0px 1px rgba(255,255,255,1) inset, 0px 1px 4px 2px rgba(128,255,255,0.6) inset,0px 4px 2px 2px rgba(0,0,0,1);
 	z-index:10;
 	color:rgba(255,255,255,1);
-	transform:scale(1.1);
+}
+.langSelectButton:hover:before
+{
+	content:'';
+	width:22px;
+	height:22px;
+	position:absolute;
+	left:0px;
+	top:0px;
+	background:url(img/tinyglobe.gif);
+	pointer-events:none;
+	display:block;
+	transform:scale(0.75);
 }
 
 #game
